Update slider and fix some problems.
-update slider's caption.
-fix slider inside row cause the ugly horizontal scrollbar

--- a/frontend/src/assets/css/custom.css
+++ b/frontend/src/assets/css/custom.css
@@ -70,3 +70,16 @@
     transform: translate(0px, 0px);
   }
 }
+.slider-text {
+  text-shadow: 2px 2px #434343;
+}
+.slider-description {
+  text-shadow: 2px 2px #414141;
+  font-weight: bold;
+}
+.slider-image {
+  filter: brightness(85%);
+}
+.slider-home-banner {
+  overflow-x: hidden;
+}
