--- a/frontend/src/assets/css/responsive.css
+++ b/frontend/src/assets/css/responsive.css
@@ -31,7 +31,7 @@
     min-width: 280px;
   }
   .slider-home-banner .carousel-item img {
-    max-height: 350px;
+    max-height: 300px;
   }
 }
 
